[package]
name = "n64-pac"
version = "0.3.1"
edition = "2021"
authors = ["Luke Stadem <bigbass1997.website@gmail.com>"]
description = "Provides low-level CPU and register abstractions for the Nintendo 64 console"
license = "MIT"
repository = "https://github.com/bigbass1997/n64-pac"
keywords = ["no_std", "n64", "pac", "embedded"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
proc-bitfield = "0.2"
num_enum = { version = "0.5", default-features = false }
paste = "1"